# ResolveIQ

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: main.py  pyproject.toml
docs/: erd-v1.md
docs/ADR/: ADR-001-dataset-and-stack.md  schema_notes.md
docs/exploration/: cfpb-field-notes.md
docs/exploration/data/: 01_cfpb_exploration-checkpoint.ipynb
docs/exploration/data/.ipynb_checkpoints/: 01_cfpb_exploration-checkpoint-checkpoint.ipynb
ingestion/: cfpb_client.py  pyproject.toml
ml/: 01_cfpb_exploration.ipynb  pyproject.toml
ml/tests/: dummy_.py
